--- a/TT-2016-B045/archivosTex/protocoloDupless.tex
+++ b/TT-2016-B045/archivosTex/protocoloDupless.tex
@@ -82,7 +82,7 @@ Un esquema que consta de cinco algoritmos (Kg, EvC, EvS, Vf, Ev), los últimos d
 
 \begin{itemize}
 	\item \textit{Generación de claves Kg: } \\
-	 (pk, sk) \$ ← Kg. Este algoritmo genera una llave pública \textit{pk} que puede distribuirse libremente entre varios usuarios, y una clave privada \textit{sk} que permanece sólo en el servidor de llaves. Dichas claves serán parte del servidor, son generadas a través del algoritmo de clave pública RSA.
+	 (pk, sk) \$ ← Kg. Este algoritmo genera una llave pública \textit{pk= (e,n)} que puede distribuirse libremente entre varios usuarios, y una clave privada \textit{sk = (d,n)} que permanece sólo en el servidor de llaves. Dichas claves serán parte del servidor, son generadas a través del algoritmo de clave pública RSA.
 
 
 	\item \textit{EvC: }\\ 
