--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -244,33 +244,61 @@ R9 & Sobre estimación de insumos & Los insumos utilizados en el proyecto están
 
 \end{figure}
 
-%\begin{figure}[H]
-%\centering
-%	\includegraphics[width=16cm, height=11cm]{./images/Paso01.jpg}
-%	\caption{Arquitectura del sistema paso 1.}
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=11cm]{./images/Paso01.jpg}
+	\caption{Arquitectura del sistema paso 1.}
 
-%\end{figure}
+\end{figure}
 
-%\begin{figure}[H]
-%\centering
-%	\includegraphics[width=16cm, height=13cm]{./images/Paso02.jpg}
-%	\caption{Arquitectura del sistema paso 2.}
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=13cm]{./images/Paso02.jpg}
+	\caption{Arquitectura del sistema paso 2.}
 
-%\end{figure}
+\end{figure}
 
-%\begin{figure}[H]
-%\centering
-%	\includegraphics[width=16cm, height=10cm]{./images/Paso03.jpg}
-%	\caption{Arquitectura del sistema paso 3.}
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=10cm]{./images/Paso03.jpg}
+	\caption{Arquitectura del sistema paso 3.}
 
-%\end{figure}
+\end{figure}
 
-%\begin{figure}[H]
-%\centering
-%	\includegraphics[width=16cm, height=10cm]{./images/Paso04.jpg}
-%	\caption{Arquitectura del sistema paso 4.}
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=10cm]{./images/Paso3_5.jpg}
+	\caption{Arquitectura del sistema paso 4.}
 
-%\end{figure}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=11cm]{./images/Paso04.jpg}
+	\caption{Arquitectura del sistema paso 5.}
+
+\end{figure}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=13cm]{./images/Paso05.jpg}
+	\caption{Arquitectura del sistema paso 6.}
+
+\end{figure}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=10cm]{./images/Paso06.jpg}
+	\caption{Arquitectura del sistema paso 7.}
+
+\end{figure}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=10cm]{./images/Paso07.jpg}
+	\caption{Arquitectura del sistema paso 8.}
+
+\end{figure}
 
 %=============================================================================================================================================================
 \section{Descripción de procesos. }
